# cpp

./: .clang-format  .gitmodules
.devcontainer/: Dockerfile  devcontainer.json
Tooling/: README.md
Tooling/HelloWorld/: CMakeLists.txt
Tooling/HelloWorld/cmake/: AddGitSubmodule.cmake
Tooling/HelloWorld/config/: CMakeLists.txt  config.hpp.in
Tooling/HelloWorld/include/: print.hpp
Tooling/HelloWorld/src/: main.cpp  print.cpp
modern_cpp/: README.md
modern_cpp/constructors/: CMakeLists.txt  main.cpp
modern_cpp/insert_iterator/: CMakeLists.txt  main.cpp
modern_cpp/misc/: CMakeLists.txt  main.cpp
modern_cpp/smart_ptr/: CMakeLists.txt
modern_cpp/smart_ptr/include/: dependency.hpp  point.hpp  shapes.hpp
modern_cpp/smart_ptr/src/: dependency.cpp  main.cpp  point.cpp
modern_cpp/sum_solutions/: CMakeLists.txt  main.cpp
